--- a/docs/Dify应用/1.md
+++ b/docs/Dify应用/1.md
@@ -131,4 +131,50 @@
 ## 7. 修订说明
 
 - **术语统一情况**：将文中 “rug” 统一规范为 “检索增强生成（RAG）”，“ebenin模型” 规范为 “嵌入模型”，“recently er模型” 规范为 “重排模型”，统一了RAG领域专业术语表述，符合行业标准。
-- **主要口误修正点**：修正了多处重复表述、冗余语气词和模糊表述。例如，去除 “嗯、啊、这个” 等冗余语气词；修正术语错误，将 "Defect" 统一为 "Dify"。 
+- **主要口误修正点**：修正了多处重复表述、冗余语气词和模糊表述。例如，去除 “嗯、啊、这个” 等冗余语气词；修正术语错误，将 "Defect" 统一为 "Dify"。
+
+## 8. XMind思维导图示例
+
+以下是RAG企业私有知识库建设的思维导图，您可以参考此格式将您的XMind文档转换为Markdown格式：
+
+```mermaid
+mindmap
+  root((RAG企业私有知识库建设))
+    什么是RAG
+      解决大模型知识局限性
+      检索+生成结合
+      主流技术方案
+    RAG架构
+      文档载入
+      文本分块
+      向量化处理
+      向量数据库存储
+      查询向量化
+      相似性检索
+      提示词模板
+      大模型生成
+    Dify知识库功能
+      多格式支持
+      可视化流程
+      易用的用户界面
+    关键模型组件
+      嵌入模型
+      重排模型
+      大语言模型
+    创建知识库步骤
+      打开控制后台
+      选择数据来源
+      分段清洗设置
+      索引方式设置
+      检索设置
+    应用结合
+      新建聊天助手
+      设置模型参数
+      关联知识库
+      设置引用归属
+      上下文参数
+    测试与优化
+      调整分段参数
+      调整模型参数
+      调整检索参数
+``` 
