fix: 替换mindmap为flowchart，解决兼容性问题

--- a/docs/Dify应用/1.md
+++ b/docs/Dify应用/1.md
@@ -135,46 +135,136 @@
 
 ## 8. XMind思维导图示例
 
-以下是RAG企业私有知识库建设的思维导图，您可以参考此格式将您的XMind文档转换为Markdown格式：
+以下是RAG企业私有知识库建设的流程图，使用Mermaid的flowchart语法实现，具有更好的兼容性：
 
 ```mermaid
-mindmap
-  root((RAG企业私有知识库建设))
-    什么是RAG
-      解决大模型知识局限性
-      检索+生成结合
-      主流技术方案
-    RAG架构
-      文档载入
-      文本分块
-      向量化处理
-      向量数据库存储
-      查询向量化
-      相似性检索
-      提示词模板
-      大模型生成
-    Dify知识库功能
-      多格式支持
-      可视化流程
-      易用的用户界面
-    关键模型组件
-      嵌入模型
-      重排模型
-      大语言模型
-    创建知识库步骤
-      打开控制后台
-      选择数据来源
-      分段清洗设置
-      索引方式设置
-      检索设置
-    应用结合
-      新建聊天助手
-      设置模型参数
-      关联知识库
-      设置引用归属
-      上下文参数
-    测试与优化
-      调整分段参数
-      调整模型参数
-      调整检索参数
+flowchart TD
+    A[RAG企业私有知识库建设] --> B[什么是RAG]
+    A --> C[RAG架构]
+    A --> D[Dify知识库功能]
+    A --> E[关键模型组件]
+    A --> F[创建知识库步骤]
+    A --> G[应用结合]
+    A --> H[测试与优化]
+    
+    B --> B1[解决大模型知识局限性]
+    B --> B2[检索+生成结合]
+    B --> B3[主流技术方案]
+    
+    C --> C1[文档载入]
+    C --> C2[文本分块]
+    C --> C3[向量化处理]
+    C --> C4[向量数据库存储]
+    C --> C5[查询向量化]
+    C --> C6[相似性检索]
+    C --> C7[提示词模板]
+    C --> C8[大模型生成]
+    
+    D --> D1[多格式支持]
+    D --> D2[可视化流程]
+    D --> D3[易用的用户界面]
+    
+    E --> E1[嵌入模型]
+    E --> E2[重排模型]
+    E --> E3[大语言模型]
+    
+    F --> F1[打开控制后台]
+    F --> F2[选择数据来源]
+    F --> F3[分段清洗设置]
+    F --> F4[索引方式设置]
+    F --> F5[检索设置]
+    
+    G --> G1[新建聊天助手]
+    G --> G2[设置模型参数]
+    G --> G3[关联知识库]
+    G --> G4[设置引用归属]
+    G --> G5[上下文参数]
+    
+    H --> H1[调整分段参数]
+    H --> H2[调整模型参数]
+    H --> H3[调整检索参数]
+```
+
+### 另一种风格：径向思维导图
+
+```mermaid
+flowchart LR
+    subgraph 中心
+        A[RAG企业私有知识库建设]
+    end
+    
+    subgraph 左侧
+        B[什么是RAG]
+        B1[解决大模型知识局限性]
+        B2[检索+生成结合]
+        B3[主流技术方案]
+    end
+    
+    subgraph 左上
+        C[RAG架构]
+        C1[文档载入]
+        C2[文本分块]
+        C3[向量化处理]
+        C4[向量数据库存储]
+    end
+    
+    subgraph 右上
+        D[Dify知识库功能]
+        D1[多格式支持]
+        D2[可视化流程]
+        D3[易用的用户界面]
+    end
+    
+    subgraph 右侧
+        E[关键模型组件]
+        E1[嵌入模型]
+        E2[重排模型]
+        E3[大语言模型]
+    end
+    
+    subgraph 右下
+        F[创建知识库步骤]
+        F1[打开控制后台]
+        F2[选择数据来源]
+        F3[分段清洗设置]
+    end
+    
+    subgraph 左下
+        G[应用结合]
+        G1[新建聊天助手]
+        G2[设置模型参数]
+        G3[关联知识库]
+    end
+    
+    A --- B
+    A --- C
+    A --- D
+    A --- E
+    A --- F
+    A --- G
+    
+    B --- B1
+    B --- B2
+    B --- B3
+    
+    C --- C1
+    C --- C2
+    C --- C3
+    C --- C4
+    
+    D --- D1
+    D --- D2
+    D --- D3
+    
+    E --- E1
+    E --- E2
+    E --- E3
+    
+    F --- F1
+    F --- F2
+    F --- F3
+    
+    G --- G1
+    G --- G2
+    G --- G3
 ``` 
