fix: Markmap插件配置与使用方式修复

--- a/docs/Dify应用/1.md
+++ b/docs/Dify应用/1.md
@@ -135,9 +135,95 @@
 
 ## 8. XMind思维导图示例
 
-### 测试Mermaid基础功能
+我们现在支持两种思维导图方式：Mermaid mindmap 和 Markmap。
 
-让我们先测试一个简单的Mermaid流程图，确保Mermaid功能正常工作：
+### 1. Markmap 示例（推荐）
+
+Markmap 支持直接使用 Markdown 标题层级，非常适合从 XMind 导出的内容：
+
+::: markmap
+# RAG企业私有知识库建设
+## 什么是RAG
+### 解决大模型知识局限性
+### 检索+生成结合
+### 主流技术方案
+## RAG架构
+### 文档载入
+### 文本分块
+### 向量化处理
+### 向量数据库存储
+### 查询向量化
+### 相似性检索
+### 提示词模板
+### 大模型生成
+## Dify知识库功能
+### 多格式支持
+### 可视化流程
+### 易用的用户界面
+## 关键模型组件
+### 嵌入模型
+### 重排模型
+### 大语言模型
+## 创建知识库步骤
+### 打开控制后台
+### 选择数据来源
+### 分段清洗设置
+### 索引方式设置
+### 检索设置
+## 应用结合
+### 新建聊天助手
+### 设置模型参数
+### 关联知识库
+### 设置引用归属
+### 上下文参数
+## 测试与优化
+:::
+
+### 2. Mermaid Mindmap 示例
+
+```mermaid
+mindmap
+  root((RAG企业私有知识库建设))
+    什么是RAG
+      解决大模型知识局限性
+      检索+生成结合
+      主流技术方案
+    RAG架构
+      文档载入
+      文本分块
+      向量化处理
+      向量数据库存储
+      查询向量化
+      相似性检索
+      提示词模板
+      大模型生成
+    Dify知识库功能
+      多格式支持
+      可视化流程
+      易用的用户界面
+    关键模型组件
+      嵌入模型
+      重排模型
+      大语言模型
+    创建知识库步骤
+      打开控制后台
+      选择数据来源
+      分段清洗设置
+      索引方式设置
+      检索设置
+    应用结合
+      新建聊天助手
+      设置模型参数
+      关联知识库
+      设置引用归属
+      上下文参数
+    测试与优化
+      调整分段参数
+      调整模型参数
+      调整检索参数
+```
+
+### 3. 基础流程图测试
 
 ```mermaid
 graph LR
@@ -147,73 +233,7 @@ graph LR
     C --> D
 ```
 
-### 基础流程图示例
-
-```mermaid
-graph TD
-    A[开始] --> B{条件A}
-    B -->|是| C[结果1]
-    B -->|否| D[结果2]
-    C --> E[结束]
-    D --> E
-```
-
-### RAG知识体系结构图
-
-以下是RAG企业私有知识库建设的结构图，使用更简洁的语法：
-
-```mermaid
-graph TD
-    subgraph RAG企业私有知识库建设
-        A[什么是RAG]
-        B[RAG架构]
-        C[关键模型]
-        D[Dify功能]
-        E[创建步骤]
-        F[应用结合]
-        G[测试优化]
-    end
-    
-    subgraph 什么是RAG
-        A1[解决知识局限]
-        A2[检索+生成]
-        A3[主流方案]
-    end
-    
-    A --> A1
-    A --> A2
-    A --> A3
-    
-    subgraph RAG架构
-        B1[文档载入]
-        B2[文本分块]
-        B3[向量化]
-        B4[向量存储]
-        B5[查询处理]
-        B6[相似检索]
-        B7[生成回答]
-    end
-    
-    B --> B1
-    B --> B2
-    B --> B3
-    B --> B4
-    B --> B5
-    B --> B6
-    B --> B7
-    
-    subgraph 关键模型
-        C1[嵌入模型]
-        C2[重排模型]
-        C3[大语言模型]
-    end
-    
-    C --> C1
-    C --> C2
-    C --> C3
-```
-
-### 替代方案：使用列表形式展示XMind结构
+### 4. 替代方案：使用列表形式展示XMind结构
 
 如果Mermaid流程图仍有问题，您也可以使用Markdown列表来展示XMind文档结构：
 
