feat: 格式化西瓜老师课程内容列表

--- a/docs/西瓜老师/代办.md
+++ b/docs/西瓜老师/代办.md
@@ -1,3 +1,32 @@
-79 高性能知识库之代码落地-开源模型部署(6)，可以学习部署大模型。
-文件目录：
+# 西瓜老师的RAG课程内容
+
+## 课程目录
+
+- **第79节** 高性能知识库之代码落地-开源模型部署(6)，可以学习部署大模型。
+
+### 文件目录：
 文件/大模型/西瓜老师：2025AI大模型RAG项目实战课 价值399元/AI大模型RAG项目实战课 
+
+- **第96节** 高性能知识库之代码落地-知识管理私有PDF文件处理(上).mp4
+
+- **第103节** 高性能知识库之代码落地-效果评估关键指标剖析.mp4
+- **第104节** 高性能知识库之代码落地-效果评估工具Trulens演示.mp4
+- **第105节** 高性能知识库之代码落地-效果评估工具Ragas演示.mp4
+- **第106节** 高性能知识库之代码落地-效果评估工具自研代码设计思路.mp4
+- **第107节** 高性能知识库之代码落地-效果评估工具自研数据处理代码实现.mp4
+- **第108节** 高性能知识库之代码落地-效果评估工具自研提示词模板代码实现.mp4
+- **第109节** 高性能知识库之代码落地-效果评估工具自研检索器代码实现(上).mp4
+- **第110节** 高性能知识库之代码落地-效果评估工具自研检索器代码实现(下).mp4
+- **第111节** 高性能知识库之代码落地-效果评估工具自研模型管理代码实现.mp4
+- **第112节** 高性能知识库之代码落地-效果评估工具自研指标定义代码实现.mp4
+- **第113节** 高性能知识库之代码落地-效果评估工具自研代码测试.mp4
+
+- **第114节** 高性能知识库之代码落地-rerank算法原理.mp4
+- **第115节** 高性能知识库之代码落地-rerank算法效果复现.mp4
+- **第116节** 高性能知识库之代码落地-rerank算法代码实现.mp4
+- **第117节** 高性能知识库之代码落地-联网问答开发目标.mp4
+- **第118节** 高性能知识库之代码落地-联网问答搜索工具介绍.mp4
+- **第119节** 高性能知识库之代码落地-联网问答实时检索流程代码开发.mp4
+
+- **第120节** 高性能知识库之代码落地-联网问答Docker安装部署.mp4
+- **第121节** 高性能知识库之代码落地-联网问答Milvus安装部署.mp4
